--- a/src/Resources/views/form_recaptcha.html.twig
+++ b/src/Resources/views/form_recaptcha.html.twig
@@ -1,10 +1,6 @@
 {% form_theme settings.form '@EWZRecaptcha/Form/ewz_recaptcha_widget.html.twig' %}
 
-{{ form_errors(settings.form.recaptcha) }}
-{{ form_widget(settings.form.recaptcha, { 'attr': {
-    'options' : {
-        'theme': 'light',
-        'type': 'image',
-        'size': 'normal'
-    },
-} }) }}
+<div class="has-error text-center">
+    {{ form_errors(settings.form.recaptcha) }}
+</div>
+
